--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 1aa8948e-1ec1-455f-9e0e-16deebe5502e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇬🇧 英国-3.17MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-223.0KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.29MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-302.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-14.68MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-5.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-413.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 26023, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.12MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-5.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-223.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
