--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-302.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-14.68MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-835.1KB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: d6b70aec-bda5-4c5a-b37f-931ce32ded7b, sni: 625us.ok365.cyou, skip-cert-verify: true}
   - {name: 🇨🇳 中国-413.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 26023, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.12MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-5.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 台湾-9.13MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-678.2KB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-13.24MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 12348, type: vmess, uuid: 9b29114b-723b-40ca-bc2b-e3f97d43534d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
+  - {name: 🇨🇳 中国-519.9KB/s(Youtube:不良林), server: 36.134.53.194, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-414.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26060, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-361.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 26063, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-390.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26061, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
