--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-835.1KB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: d6b70aec-bda5-4c5a-b37f-931ce32ded7b, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-413.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 26023, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-9.13MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-678.2KB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-13.24MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 12348, type: vmess, uuid: 9b29114b-723b-40ca-bc2b-e3f97d43534d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
-  - {name: 🇨🇳 中国-519.9KB/s(Youtube:不良林), server: 36.134.53.194, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-414.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26060, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-361.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 26063, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-390.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26061, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 未知国家-2.11MB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
+  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.08MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇯🇵 日本-7.31MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇮🇳 印度-3.12MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-835.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.13MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-678.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-519.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
