--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 未知国家-2.11MB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
   - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.08MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇯🇵 日本-7.31MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇮🇳 印度-3.12MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-889.1KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.13MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 未知国家-2.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.31MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
